[tool.poetry]
name = "twitter-image-collage-maker"
version = "0.2.0"
description = "Web application that makes 2x2, 3x1 or 2x1 collages from images from Tweets. Made for https://github.com/TheLovinator1/discord-twitter-webhooks"
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/TheLovinator1/twitter-image-collage-maker"
repository = "https://github.com/TheLovinator1/twitter-image-collage-maker"
keywords = [
    "bot",
    "discord",
    "twitter-image-collage-maker",
    "twitter",
    "tweepy",
]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.5.0"
Pillow = "^9.0.1"
dhooks = { git = "https://github.com/kyb3r/dhooks.git" }
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
fastapi = "^0.74.0"
platformdirs = "^2.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
bandit = "^1.7.2"
mypy = "^0.931"
types-requests = "^2.27.10"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
