[tool.poetry]
name = "twitter-image-collage-maker"
version = "0.3.0"
description = "Web application that makes 2x2, 3x1 or 2x1 collages from images from Tweets. Made for https://github.com/TheLovinator1/discord-twitter-webhooks"
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/TheLovinator1/twitter-image-collage-maker"
repository = "https://github.com/TheLovinator1/twitter-image-collage-maker"
keywords = [
    "bot",
    "discord",
    "twitter-image-collage-maker",
    "twitter",
    "tweepy",
]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.10.0"
Pillow = "^9.2.0"
discord-webhook = "^0.16.3"
fastapi = "^0.79.0"
platformdirs = "^2.5.2"
python-dotenv = "^0.20.0"
uvicorn = { extras = ["standard"], version = "^0.18.2" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
